03-gateway-api/gatewayclass.yaml
---
# GatewayClass
#
# Replaces: IngressClass
#
# GatewayClass defines WHICH controller implementation will handle
# the traffic. This is set once
#
# controller: gateway.envoyproxy.io/gatewayclass-controller
#   → tells Kubernetes that Envoy Gateway manages this class
#
# Migration note:
#   IngressClass (nginx) → GatewayClass (eg)
#
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  description: "Envoy Gateway — production-grade Gateway API implementation"
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: kind-proxy-config
    namespace: envoy-gateway-system
